Ability set a cookie

--- a/.env.dist
+++ b/.env.dist
@@ -1,11 +1,17 @@
 # Search system settings
+
 # https://www.google.com/search?q=
 # https://ya.ru/search/?text=
 # https://www.bing.com/search?q=
+# https://duckduckgo.com/?q=
 SEARCH_LINK=https://ya.ru/search/?text=
 USER_AGENT=Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:47.0) Gecko/20100101 Firefox/47.0
+COOKIE=
+BLACK_LIST=
+
 
 # Flask server settings
+
 DEBUG=True
 HOST=localhost
 PORT=5555
